# oscar_vehicle_ros_interface

./: README.md
oscar_teleop/: CMakeLists.txt  package.xml
oscar_teleop/launch/: joy.launch
oscar_teleop/scripts/: joy.py
oscar_vehicle_driver/: CMakeLists.txt  package.xml
oscar_vehicle_driver/launch/: driver.launch  joy_and_driver.launch
oscar_vehicle_driver/msg/: VehicleCmd.msg  VehicleCmdRaw.msg  VehicleStatus.msg
oscar_vehicle_driver/scripts/: driver.py
oscar_vehicle_driver/srv/: Trigger.srv
